1498/1498.6/Logs/travis-log.md
```
travis_fold:start:worker_info[0K[33;1mWorker information[0m
hostname: 883631dc-aec6-43ce-858a-3d9c59400de7@1.worker-org-847f45b8fd-fcqvt.gce-production-2
version: v6.2.6 https://github.com/travis-ci/worker/tree/ba21bd30589fd152126e13df30e0cc78ccdf2837
instance: travis-job-6c551b49-ab6a-49cc-8999-6789be13e3b0 travis-ci-garnet-trusty-1512502259-986baf0 (via amqp)
startup: 6.176321475s
travis_fold:end:worker_info[0Ktravis_time:start:1a934430[0Ktravis_time:end:1a934430:start=1579948084871602051,finish=1579948085022129254,duration=150527203,event=no_world_writable_dirs[0Ktravis_time:start:058e12fc[0Ktravis_time:end:058e12fc:start=1579948085024661789,finish=1579948085027227020,duration=2565231,event=setup_filter[0Ktravis_time:start:11b98a5c[0Ktravis_time:end:11b98a5c:start=1579948085031319458,finish=1579948085038684372,duration=7364914,event=agent[0Ktravis_time:start:0048e82a[0Ktravis_time:end:0048e82a:start=1579948085041065228,finish=1579948085042800883,duration=1735655,event=check_unsupported[0Ktravis_time:start:215ebae9[0Ktravis_fold:start:system_info[0K[33;1mBuild system information[0m
Build language: python
Build group: stable
Build dist: trusty
Build id: 641687652
Job id: 641687658
Runtime kernel version: 4.4.0-101-generic
travis-build version: 74fa7e3af
[34m[1mBuild image provisioning date and time[0m
Tue Dec  5 19:58:13 UTC 2017
[34m[1mOperating System Details[0m
Distributor ID:	Ubuntu
Description:	Ubuntu 14.04.5 LTS
Release:	14.04
Codename:	trusty
[34m[1mCookbooks Version[0m
7c2c6a6 https://github.com/travis-ci/travis-cookbooks/tree/7c2c6a6
[34m[1mgit version[0m
git version 2.15.1
[34m[1mbash version[0m
GNU bash, version 4.3.11(1)-release (x86_64-pc-linux-gnu)
[34m[1mgcc version[0m
gcc (Ubuntu 4.8.4-2ubuntu1~14.04.3) 4.8.4
Copyright (C) 2013 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

[34m[1mdocker version[0m
Client:
 Version:      17.09.0-ce
 API version:  1.32
 Go version:   go1.8.3
 Git commit:   afdb6d4
 Built:        Tue Sep 26 22:42:38 2017
 OS/Arch:      linux/amd64

Server:
 Version:      17.09.0-ce
 API version:  1.32 (minimum version 1.12)
 Go version:   go1.8.3
 Git commit:   afdb6d4
 Built:        Tue Sep 26 22:41:20 2017
 OS/Arch:      linux/amd64
 Experimental: false
[34m[1mclang version[0m
clang version 5.0.0 (tags/RELEASE_500/final)
Target: x86_64-unknown-linux-gnu
Thread model: posix
InstalledDir: /usr/local/clang-5.0.0/bin
[34m[1mjq version[0m
jq-1.5
[34m[1mbats version[0m
Bats 0.4.0
[34m[1mshellcheck version[0m
0.4.6
[34m[1mshfmt version[0m
v2.0.0
[34m[1mccache version[0m
ccache version 3.1.9

Copyright (C) 2002-2007 Andrew Tridgell
Copyright (C) 2009-2011 Joel Rosdahl

This program is free software; you can redistribute it and/or modify it under
the terms of the GNU General Public License as published by the Free Software
Foundation; either version 3 of the License, or (at your option) any later
version.
[34m[1mcmake version[0m
cmake version 3.9.2

CMake suite maintained and supported by Kitware (kitware.com/cmake).
[34m[1mheroku version[0m
heroku-cli/6.14.39-addc925 (linux-x64) node-v9.2.0
[34m[1mimagemagick version[0m
Version: ImageMagick 6.7.7-10 2017-07-31 Q16 http://www.imagemagick.org
[34m[1mmd5deep version[0m
4.2
[34m[1mmercurial version[0m
Mercurial Distributed SCM (version 4.2.2)
(see https://mercurial-scm.org for more information)

Copyright (C) 2005-2017 Matt Mackall and others
This is free software; see the source for copying conditions. There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
[34m[1mmysql version[0m
mysql  Ver 14.14 Distrib 5.6.33, for debian-linux-gnu (x86_64) using  EditLine wrapper
[34m[1mopenssl version[0m
OpenSSL 1.0.1f 6 Jan 2014
[34m[1mpacker version[0m
Packer v1.0.2

Your version of Packer is out of date! The latest version
is 1.1.2. You can update by downloading from www.packer.io
[34m[1mpostgresql client version[0m
psql (PostgreSQL) 9.6.6
[34m[1mragel version[0m
Ragel State Machine Compiler version 6.8 Feb 2013
Copyright (c) 2001-2009 by Adrian Thurston
[34m[1msubversion version[0m
svn, version 1.8.8 (r1568071)
   compiled Aug 10 2017, 17:20:39 on x86_64-pc-linux-gnu

Copyright (C) 2013 The Apache Software Foundation.
This software consists of contributions made by many people;
see the NOTICE file for more information.
Subversion is open source software, see http://subversion.apache.org/

The following repository access (RA) modules are available:

* ra_svn : Module for accessing a repository using the svn network protocol.
  - with Cyrus SASL authentication
  - handles 'svn' scheme
* ra_local : Module for accessing a repository on local disk.
  - handles 'file' scheme
* ra_serf : Module for accessing a repository via WebDAV protocol using serf.
  - using serf 1.3.3
  - handles 'http' scheme
  - handles 'https' scheme

[34m[1msudo version[0m
Sudo version 1.8.9p5
Configure options: --prefix=/usr -v --with-all-insults --with-pam --with-fqdn --with-logging=syslog --with-logfac=authpriv --with-env-editor --with-editor=/usr/bin/editor --with-timeout=15 --with-password-timeout=0 --with-passprompt=[sudo] password for %p:  --without-lecture --with-tty-tickets --disable-root-mailer --enable-admin-flag --with-sendmail=/usr/sbin/sendmail --with-timedir=/var/lib/sudo --mandir=/usr/share/man --libexecdir=/usr/lib/sudo --with-sssd --with-sssd-lib=/usr/lib/x86_64-linux-gnu --with-selinux
Sudoers policy plugin version 1.8.9p5
Sudoers file grammar version 43

Sudoers path: /etc/sudoers
Authentication methods: 'pam'
Syslog facility if syslog is being used for logging: authpriv
Syslog priority to use when user authenticates successfully: notice
Syslog priority to use when user authenticates unsuccessfully: alert
Send mail if the user is not in sudoers
Use a separate timestamp for each user/tty combo
Lecture user the first time they run sudo
Root may run sudo
Allow some information gathering to give useful error messages
Require fully-qualified hostnames in the sudoers file
Visudo will honor the EDITOR environment variable
Set the LOGNAME and USER environment variables
Length at which to wrap log file lines (0 for no wrap): 80
Authentication timestamp timeout: 15.0 minutes
Password prompt timeout: 0.0 minutes
Number of tries to enter a password: 3
Umask to use or 0777 to use user's: 022
Path to mail program: /usr/sbin/sendmail
Flags for mail program: -t
Address to send mail to: root
Subject line for mail messages: *** SECURITY information for %h ***
Incorrect password message: Sorry, try again.
Path to authentication timestamp dir: /var/lib/sudo
Default password prompt: [sudo] password for %p: 
Default user to run commands as: root
Value to override user's $PATH with: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/snap/bin
Path to the editor for use by visudo: /usr/bin/editor
When to require a password for 'list' pseudocommand: any
When to require a password for 'verify' pseudocommand: all
File descriptors >= 3 will be closed before executing a command
Environment variables to check for sanity:
	TZ
	TERM
	LINGUAS
	LC_*
	LANGUAGE
	LANG
	COLORTERM
Environment variables to remove:
	RUBYOPT
	RUBYLIB
	PYTHONUSERBASE
	PYTHONINSPECT
	PYTHONPATH
	PYTHONHOME
	TMPPREFIX
	ZDOTDIR
	READNULLCMD
	NULLCMD
	FPATH
	PERL5DB
	PERL5OPT
	PERL5LIB
	PERLLIB
	PERLIO_DEBUG 
	JAVA_TOOL_OPTIONS
	SHELLOPTS
	GLOBIGNORE
	PS4
	BASH_ENV
	ENV
	TERMCAP
	TERMPATH
	TERMINFO_DIRS
	TERMINFO
	_RLD*
	LD_*
	PATH_LOCALE
	NLSPATH
	HOSTALIASES
	RES_OPTIONS
	LOCALDOMAIN
	CDPATH
	IFS
Environment variables to preserve:
	JAVA_HOME
	TRAVIS
	CI
	DEBIAN_FRONTEND
	XAUTHORIZATION
	XAUTHORITY
	PS2
	PS1
	PATH
	LS_COLORS
	KRB5CCNAME
	HOSTNAME
	HOME
	DISPLAY
	COLORS
Locale to use while parsing sudoers: C
Directory in which to store input/output logs: /var/log/sudo-io
File in which to store the input/output log: %{seq}
Add an entry to the utmp/utmpx file when allocating a pty
PAM service name to use
PAM service name to use for login shells
Create a new PAM session for the command to run in
Maximum I/O log sequence number: 0

Local IP address and netmask pairs:
	10.240.0.28/255.255.255.255
	172.17.0.1/255.255.0.0

Sudoers I/O plugin version 1.8.9p5
[34m[1mgzip version[0m
gzip 1.6
Copyright (C) 2007, 2010, 2011 Free Software Foundation, Inc.
Copyright (C) 1993 Jean-loup Gailly.
This is free software.  You may redistribute copies of it under the terms of
the GNU General Public License <http://www.gnu.org/licenses/gpl.html>.
There is NO WARRANTY, to the extent permitted by law.

Written by Jean-loup Gailly.
[34m[1mzip version[0m
Copyright (c) 1990-2008 Info-ZIP - Type 'zip "-L"' for software license.
This is Zip 3.0 (July 5th 2008), by Info-ZIP.
Currently maintained by E. Gordon.  Please send bug reports to
the authors using the web page at www.info-zip.org; see README for details.

Latest sources and executables are at ftp://ftp.info-zip.org/pub/infozip,
as of above date; see http://www.info-zip.org/ for other sites.

Compiled with gcc 4.8.2 for Unix (Linux ELF) on Oct 21 2013.

Zip special compilation options:
	USE_EF_UT_TIME       (store Universal Time)
	BZIP2_SUPPORT        (bzip2 library version 1.0.6, 6-Sept-2010)
	    bzip2 code and library copyright (c) Julian R Seward
	    (See the bzip2 license for terms of use)
	SYMLINK_SUPPORT      (symbolic links supported)
	LARGE_FILE_SUPPORT   (can read and write large files on file system)
	ZIP64_SUPPORT        (use Zip64 to store large files in archives)
	UNICODE_SUPPORT      (store and read UTF-8 Unicode paths)
	STORE_UNIX_UIDs_GIDs (store UID/GID sizes/values using new extra field)
	UIDGID_NOT_16BIT     (old Unix 16-bit UID/GID extra field not used)
	[encryption, version 2.91 of 05 Jan 2007] (modified for Zip 3)

Encryption notice:
	The encryption code of this program is not copyrighted and is
	put in the public domain.  It was originally written in Europe
	and, to the best of our knowledge, can be freely distributed
	in both source and object forms from any country, including
	the USA under License Exception TSU of the U.S. Export
	Administration Regulations (section 740.13(e)) of 6 June 2002.

Zip environment options:
             ZIP:  [none]
          ZIPOPT:  [none]
[34m[1mvim version[0m
VIM - Vi IMproved 7.4 (2013 Aug 10, compiled Nov 24 2016 16:43:18)
Included patches: 1-52
Extra patches: 8.0.0056
Modified by pkg-vim-maintainers@lists.alioth.debian.org
Compiled by buildd@
Huge version without GUI.  Features included (+) or not (-):
+acl             +farsi           +mouse_netterm   +syntax
+arabic          +file_in_path    +mouse_sgr       +tag_binary
+autocmd         +find_in_path    -mouse_sysmouse  +tag_old_static
-balloon_eval    +float           +mouse_urxvt     -tag_any_white
-browse          +folding         +mouse_xterm     -tcl
++builtin_terms  -footer          +multi_byte      +terminfo
+byte_offset     +fork()          +multi_lang      +termresponse
+cindent         +gettext         -mzscheme        +textobjects
-clientserver    -hangul_input    +netbeans_intg   +title
-clipboard       +iconv           +path_extra      -toolbar
+cmdline_compl   +insert_expand   -perl            +user_commands
+cmdline_hist    +jumplist        +persistent_undo +vertsplit
+cmdline_info    +keymap          +postscript      +virtualedit
+comments        +langmap         +printer         +visual
+conceal         +libcall         +profile         +visualextra
+cryptv          +linebreak       +python          +viminfo
+cscope          +lispindent      -python3         +vreplace
+cursorbind      +listcmds        +quickfix        +wildignore
+cursorshape     +localmap        +reltime         +wildmenu
+dialog_con      -lua             +rightleft       +windows
+diff            +menu            -ruby            +writebackup
+digraphs        +mksession       +scrollbind      -X11
-dnd             +modify_fname    +signs           -xfontset
-ebcdic          +mouse           +smartindent     -xim
+emacs_tags      -mouseshape      -sniff           -xsmp
+eval            +mouse_dec       +startuptime     -xterm_clipboard
+ex_extra        +mouse_gpm       +statusline      -xterm_save
+extra_search    -mouse_jsbterm   -sun_workshop    -xpm
   system vimrc file: "$VIM/vimrc"
     user vimrc file: "$HOME/.vimrc"
 2nd user vimrc file: "~/.vim/vimrc"
      user exrc file: "$HOME/.exrc"
  fall-back for $VIM: "/usr/share/vim"
Compilation: gcc -c -I. -Iproto -DHAVE_CONFIG_H     -g -O2 -fstack-protector --param=ssp-buffer-size=4 -Wformat -Werror=format-security -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=1      
Linking: gcc   -Wl,-Bsymbolic-functions -Wl,-z,relro -Wl,--as-needed -o vim        -lm -ltinfo -lnsl  -lselinux  -lacl -lattr -lgpm -ldl    -L/usr/lib/python2.7/config-x86_64-linux-gnu -lpython2.7 -lpthread -ldl -lutil -lm -Xlinker -export-dynamic -Wl,-O1 -Wl,-Bsymbolic-functions      
[34m[1miptables version[0m
iptables v1.4.21
[34m[1mcurl version[0m
curl 7.35.0 (x86_64-pc-linux-gnu) libcurl/7.35.0 OpenSSL/1.0.1f zlib/1.2.8 libidn/1.28 librtmp/2.3
[34m[1mwget version[0m
GNU Wget 1.15 built on linux-gnu.
[34m[1mrsync version[0m
rsync  version 3.1.0  protocol version 31
[34m[1mgimme version[0m
v1.2.0
[34m[1mnvm version[0m
0.33.6
[34m[1mperlbrew version[0m
/home/travis/perl5/perlbrew/bin/perlbrew  - App::perlbrew/0.80
[34m[1mphpenv version[0m
rbenv 1.1.1-25-g6aa70b6
[34m[1mrvm version[0m
rvm 1.29.3 (latest) by Michal Papis, Piotr Kuczynski, Wayne E. Seguin [https://rvm.io]
[34m[1mdefault ruby version[0m
ruby 2.4.1p111 (2017-03-22 revision 58053) [x86_64-linux]
[34m[1mCouchDB version[0m
couchdb 1.6.1
[34m[1mElasticSearch version[0m
5.5.0
[34m[1mInstalled Firefox version[0m
firefox 56.0.2
[34m[1mMongoDB version[0m
MongoDB 3.4.10
[34m[1mPhantomJS version[0m
2.1.1
[34m[1mPre-installed PostgreSQL versions[0m
9.2.24
9.3.20
9.4.15
9.5.10
9.6.6
[34m[1mRabbitMQ Version[0m
3.6.14
[34m[1mRedis version[0m
redis-server 4.0.6
[34m[1mriak version[0m
2.2.3
[34m[1mPre-installed Go versions[0m
1.7.4
[34m[1mant version[0m
Apache Ant(TM) version 1.9.3 compiled on April 8 2014
[34m[1mmvn version[0m
Apache Maven 3.5.2 (138edd61fd100ec658bfa2d307c43b76940a5d7d; 2017-10-18T07:58:13Z)
Maven home: /usr/local/maven-3.5.2
Java version: 1.8.0_151, vendor: Oracle Corporation
Java home: /usr/lib/jvm/java-8-oracle/jre
Default locale: en_US, platform encoding: UTF-8
OS name: "linux", version: "4.4.0-98-generic", arch: "amd64", family: "unix"
[34m[1mgradle version[0m

------------------------------------------------------------
Gradle 4.0.1
------------------------------------------------------------

Build time:   2017-07-07 14:02:41 UTC
Revision:     38e5dc0f772daecca1d2681885d3d85414eb6826

Groovy:       2.4.11
Ant:          Apache Ant(TM) version 1.9.6 compiled on June 29 2015
JVM:          1.8.0_151 (Oracle Corporation 25.151-b12)
OS:           Linux 4.4.0-98-generic amd64

[34m[1mlein version[0m
Leiningen 2.8.1 on Java 1.8.0_151 Java HotSpot(TM) 64-Bit Server VM
[34m[1mPre-installed Node.js versions[0m
v4.8.6
v6.12.0
v6.12.1
v8.9
v8.9.1
[34m[1mphpenv versions[0m
  system
  5.6
* 5.6.32 (set by /home/travis/.phpenv/version)
  7.0
  7.0.25
  7.1
  7.1.11
  hhvm
  hhvm-stable
[34m[1mcomposer --version[0m
Composer version 1.5.2 2017-09-11 16:59:25
[34m[1mPre-installed Ruby versions[0m
ruby-2.2.7
ruby-2.3.4
ruby-2.4.1
travis_fold:end:system_info[0K
travis_time:end:215ebae9:start=1579948085045272990,finish=1579948085050701061,duration=5428071,event=show_system_info[0Ktravis_time:start:11435f1f[0Ktravis_time:end:11435f1f:start=1579948085053111824,finish=1579948085074558003,duration=21446179,event=rm_riak_source[0Ktravis_time:start:0148e3ba[0Ktravis_time:end:0148e3ba:start=1579948085077224826,finish=1579948085081674762,duration=4449936,event=fix_rwky_redis[0Ktravis_time:start:130e4fd8[0Ktravis_time:end:130e4fd8:start=1579948085084442200,finish=1579948085513207263,duration=428765063,event=wait_for_network[0Ktravis_time:start:0d40b60c[0Ktravis_time:end:0d40b60c:start=1579948085519176940,finish=1579948086866494206,duration=1347317266,event=update_apt_keys[0Ktravis_time:start:07e5f5c8[0Ktravis_time:end:07e5f5c8:start=1579948086871233522,finish=1579948087737433058,duration=866199536,event=fix_hhvm_source[0Ktravis_time:start:0d323a3b[0Ktravis_time:end:0d323a3b:start=1579948087741728129,finish=1579948087749926021,duration=8197892,event=update_mongo_arch[0Ktravis_time:start:1c27b4f8[0Ktravis_time:end:1c27b4f8:start=1579948087755080574,finish=1579948087788750669,duration=33670095,event=fix_sudo_enabled_trusty[0Ktravis_time:start:03b4e100[0Ktravis_time:end:03b4e100:start=1579948087792519414,finish=1579948087795228776,duration=2709362,event=update_glibc[0Ktravis_time:start:003a50ac[0Ktravis_time:end:003a50ac:start=1579948087799154035,finish=1579948087806580125,duration=7426090,event=clean_up_path[0Ktravis_time:start:03813772[0Ktravis_time:end:03813772:start=1579948087810320073,finish=1579948087818110692,duration=7790619,event=fix_resolv_conf[0Ktravis_time:start:0cd6ec6e[0Ktravis_time:end:0cd6ec6e:start=1579948087822528370,finish=1579948087830568868,duration=8040498,event=fix_etc_hosts[0Ktravis_time:start:01c0f872[0Ktravis_time:end:01c0f872:start=1579948087834474217,finish=1579948087843198037,duration=8723820,event=fix_mvn_settings_xml[0Ktravis_time:start:11771df9[0Ktravis_time:end:11771df9:start=1579948087847041201,finish=1579948087855709226,duration=8668025,event=no_ipv6_localhost[0Ktravis_time:start:18accea2[0Ktravis_time:end:18accea2:start=1579948087858805070,finish=1579948087861969108,duration=3164038,event=fix_etc_mavenrc[0Ktravis_time:start:002f6564[0Ktravis_time:end:002f6564:start=1579948087866119419,finish=1579948087869218483,duration=3099064,event=fix_wwdr_certificate[0Ktravis_time:start:04e77b9b[0Ktravis_time:end:04e77b9b:start=1579948087872743881,finish=1579948087896383906,duration=23640025,event=put_localhost_first[0Ktravis_time:start:025bbab0[0Ktravis_time:end:025bbab0:start=1579948087899402124,finish=1579948087902633863,duration=3231739,event=home_paths[0Ktravis_time:start:17335f74[0Ktravis_time:end:17335f74:start=1579948087907651285,finish=1579948087917856255,duration=10204970,event=disable_initramfs[0Ktravis_time:start:01094df0[0Ktravis_time:end:01094df0:start=1579948087921182168,finish=1579948088159788768,duration=238606600,event=disable_ssh_roaming[0Ktravis_time:start:02667db4[0Ktravis_time:end:02667db4:start=1579948088163948087,finish=1579948088166278637,duration=2330550,event=debug_tools[0Ktravis_time:start:1086e3a6[0Ktravis_time:end:1086e3a6:start=1579948088170540206,finish=1579948088173468935,duration=2928729,event=uninstall_oclint[0Ktravis_time:start:08c96382[0Ktravis_time:end:08c96382:start=1579948088180038579,finish=1579948088183179927,duration=3141348,event=rvm_use[0Ktravis_time:start:0d332103[0Ktravis_time:end:0d332103:start=1579948088187149772,finish=1579948088193844498,duration=6694726,event=rm_etc_boto_cfg[0Ktravis_time:start:07956e8e[0Ktravis_time:end:07956e8e:start=1579948088197540702,finish=1579948088201314213,duration=3773511,event=rm_oraclejdk8_symlink[0Ktravis_time:start:0f84d5b2[0Ktravis_time:end:0f84d5b2:start=1579948088205000427,finish=1579948088260935621,duration=55935194,event=enable_i386[0Ktravis_time:start:01300f38[0Ktravis_time:end:01300f38:start=1579948088266538818,finish=1579948088270348192,duration=3809374,event=update_rubygems[0Ktravis_time:start:2217ff6c[0Ktravis_time:end:2217ff6c:start=1579948088273808224,finish=1579948089109494675,duration=835686451,event=ensure_path_components[0Ktravis_time:start:0f724749[0Ktravis_time:end:0f724749:start=1579948089114247432,finish=1579948089117389527,duration=3142095,event=redefine_curl[0Ktravis_time:start:0dc03a08[0Ktravis_time:end:0dc03a08:start=1579948089121536900,finish=1579948089167276971,duration=45740071,event=nonblock_pipe[0Ktravis_time:start:0ba4c20a[0Ktravis_time:end:0ba4c20a:start=1579948089170529382,finish=1579948095197172400,duration=6026643018,event=apt_get_update[0Ktravis_time:start:003d5b47[0Ktravis_time:end:003d5b47:start=1579948095201452474,finish=1579948095204433694,duration=2981220,event=deprecate_xcode_64[0Ktravis_time:start:1648ac93[0Ktravis_time:end:1648ac93:start=1579948095208164172,finish=1579948099081019167,duration=3872854995,event=update_heroku[0Ktravis_time:start:1e3dc830[0Ktravis_time:end:1e3dc830:start=1579948099084611919,finish=1579948099086957891,duration=2345972,event=shell_session_update[0Ktravis_time:start:1a9ea994[0Ktravis_fold:start:docker_mtu[0Kdocker stop/waiting
docker start/running, process 3908
travis_fold:end:docker_mtu[0Ktravis_time:end:1a9ea994:start=1579948099090066908,finish=1579948100270171372,duration=1180104464,event=set_docker_mtu[0Ktravis_time:start:010d3d0a[0Ktravis_fold:start:resolvconf[0Kresolvconf stop/waiting
resolvconf start/running
travis_fold:end:resolvconf[0Ktravis_time:end:010d3d0a:start=1579948100274327231,finish=1579948100327921204,duration=53593973,event=resolvconf[0Ktravis_time:start:202b5598[0Ktravis_time:end:202b5598:start=1579948100332620082,finish=1579948100416921828,duration=84301746,event=maven_central_mirror[0Ktravis_time:start:02074507[0Ktravis_time:end:02074507:start=1579948100420985282,finish=1579948100481223868,duration=60238586,event=maven_https[0K[33;1m3.5 is not installed; attempting download[0m
[33;1mDownloading archive: https://storage.googleapis.com/travis-ci-language-archives/python/binaries/ubuntu/14.04/x86_64/python-3.5.tar.bz2[0m
travis_time:start:273284de[0K$ curl -sSf --retry 5 -o python-3.5.tar.bz2 ${archive_url}
travis_time:end:273284de:start=1579948100549759379,finish=1579948100985759798,duration=436000419,event=configure[0Ktravis_time:start:093ec6a0[0K$ sudo tar xjf python-3.5.tar.bz2 --directory /
travis_time:end:093ec6a0:start=1579948100990516385,finish=1579948108906076757,duration=7915560372,event=configure[0Ktravis_time:start:2e6965c8[0Ktravis_fold:start:services[0Ktravis_time:start:08effe81[0K$ sudo service docker start
start: Job is already running: docker
travis_time:end:08effe81:start=1579948108927637902,finish=1579948108940501972,duration=12864070,event=prepare[0Ktravis_fold:end:services[0Ktravis_time:end:08effe81:start=1579948108927637902,finish=1579948111946446522,duration=3018808620,event=services[0Ktravis_time:start:0ca9fa32[0Ktravis_time:end:0ca9fa32:start=1579948111950641689,finish=1579948111953254881,duration=2613192,event=fix_ps4[0Ktravis_time:start:10f4c5a8[0K
travis_fold:start:git.checkout[0Ktravis_time:start:0ede250a[0K$ git clone --depth=50 https://github.com/[secure]/systemtests.git [secure]/systemtests
Cloning into '[secure]/systemtests'...
travis_time:end:0ede250a:start=1579948111960663553,finish=1579948117133893829,duration=5173230276,event=checkout[0K$ cd [secure]/systemtests
travis_time:start:1cfe0f55[0K$ git fetch origin +refs/pull/147/merge:
From https://github.com/[secure]/systemtests
 * branch            refs/pull/147/merge -> FETCH_HEAD
travis_time:end:1cfe0f55:start=1579948117138933964,finish=1579948117504020924,duration=365086960,event=checkout[0K$ git checkout -qf FETCH_HEAD
travis_fold:end:git.checkout[0K
travis_time:end:1cfe0f55:start=1579948117138933964,finish=1579948117618310050,duration=479376086,event=checkout[0Ktravis_time:start:1641e9a6[0K
[33;1mSetting environment variables from repository settings[0m
$ export DOCKER_PASSWORD=[secure]
$ export DOCKER_USERNAME=[secure]
$ export TRAVIS_ACCESS_TOKEN=[secure]
$ export PRECICE_BOT_EMAIL=[secure]
$ export GH_TOKEN=[secure]

travis_time:end:1641e9a6:start=1579948117622061762,finish=1579948117633226984,duration=11165222,event=env[0Ktravis_time:start:231de3a5[0K$ source ~/virtualenv/python3.5/bin/activate
travis_time:end:231de3a5:start=1579948117641195950,finish=1579948117646584599,duration=5388649,event=[0K$ python --version
Python 3.5.6
$ pip --version
pip 18.0 from /home/travis/virtualenv/python3.5.6/lib/python3.5/site-packages/pip (python 3.5)
Could not locate requirements.txt. Override the install: key in your .travis.yml to install dependencies.
travis_time:start:0b455d21[0K$ python system_testing.py -s dealii-of
networks:
  [secure]comm: {}
services:
  dealii-adapter:
    command: '/bin/bash -c " ln -sf configs/* . && ./coupled_elasto_dynamics /home/[secure]/Data/Input/parameters.prm"

      '
    container_name: dealii-adapter
    depends_on:
    - openfoam-adapter
    - tutorial-data
    image: [secure]/dealii-adapter-ubuntu1604.home-develop:latest
    networks:
      [secure]comm: null
    volumes:
    - exchange:/home/[secure]/Data/Exchange:rw
    - input_dealii:/home/[secure]/Data/Input:rw
    - configs:/home/[secure]/dealii-adapter/configs:rw
    - output:/home/[secure]/Data/Output:rw
  openfoam-adapter:
    command: '/bin/bash -c "source /opt/openfoam4/etc/bashrc && ln -sf configs/* .
      && blockMesh -case /home/[secure]/Data/Input && checkMesh -case /home/[secure]/Data/Input
      && pimpleDyMFoam -case /home/[secure]/Data/Input && cp -r /home/[secure]/Data/Input/.
      /home/[secure]/Data/Output/Fluid"

      '
    container_name: openfoam-adapter
    depends_on:
    - tutorial-data
    image: [secure]/openfoam-adapter-ubuntu1604.home-develop:latest
    networks:
      [secure]comm: null
    volumes:
    - exchange:/home/[secure]/Data/Exchange:rw
    - input_of:/home/[secure]/Data/Input:rw
    - configs:/home/[secure]/openfoam-adapter/configs:rw
    - output:/home/[secure]/Data/Output:rw
  tutorial-data:
    build:
      context: /home/travis/build/[secure]/systemtests/tests/TestCompose_dealii-of
      dockerfile: Dockerfile.tutorial_data
    container_name: tutorial-data
    volumes:
    - input_of:/tutorials/FSI/flap_perp/OpenFOAM-deal.II/Fluid:rw
    - input_dealii:/tutorials/FSI/flap_perp/OpenFOAM-deal.II/Solid:rw
    - configs:/configs:rw
    - output:/Output:rw
version: '3.0'
volumes:
  configs: {}
  exchange: {}
  input_dealii: {}
  input_of: {}
  output: {}

Creating network "testcomposedealiiof_default" with the default driver
Creating network "testcomposedealiiof_[secure]comm" with the default driver
Creating volume "testcomposedealiiof_output" with default driver
Creating volume "testcomposedealiiof_configs" with default driver
Creating volume "testcomposedealiiof_input_dealii" with default driver
Creating volume "testcomposedealiiof_input_of" with default driver
Creating volume "testcomposedealiiof_exchange" with default driver
Building tutorial-data
Step 1/12 : FROM alpine
latest: Pulling from library/alpine
Digest: sha256:ab00606a42621fb68f2ed6ad3c88be54397f981a7b70a79db3d1172b11c4367d
Status: Downloaded newer image for alpine:latest
 ---> e7d92cdc71fe
Step 2/12 : ENV tutorial_path tutorials/FSI/flap_perp/OpenFOAM-deal.II
 ---> Running in 1775f6bc83df
 ---> 9960fc28924a
Removing intermediate container 1775f6bc83df
Step 3/12 : RUN apk add git
 ---> Running in e73b18f64372
fetch http://dl-cdn.alpinelinux.org/alpine/v3.11/main/x86_64/APKINDEX.tar.gz
fetch http://dl-cdn.alpinelinux.org/alpine/v3.11/community/x86_64/APKINDEX.tar.gz
(1/6) Installing ca-certificates (20191127-r0)
(2/6) Installing nghttp2-libs (1.40.0-r0)
(3/6) Installing libcurl (7.67.0-r0)
(4/6) Installing expat (2.2.9-r1)
(5/6) Installing pcre2 (10.34-r1)
(6/6) Installing git (2.24.1-r0)
Executing busybox-1.31.1-r9.trigger
Executing ca-certificates-20191127-r0.trigger
OK: 22 MiB in 20 packages
 ---> b2dbc13822e0
Removing intermediate container e73b18f64372
Step 4/12 : ARG branch=develop
 ---> Running in 6b1f3832f75e
 ---> 9dc1e10ae331
Removing intermediate container 6b1f3832f75e
Step 5/12 : RUN git clone --branch $branch https://github.com/[secure]/tutorials
 ---> Running in d78858fbaef1
[91mCloning into 'tutorials'...
[0m ---> 3615b6415711
Removing intermediate container d78858fbaef1
Step 6/12 : RUN mkdir configs && sed -e 's|<m2n:sockets from=\"Fluid\" to=\"Solid\"/>|<m2n:sockets from=\"Fluid\" to=\"Solid\" exchange-directory=\"/home/[secure]/Data/Exchange/\" network=\"eth0\"/>|g' 		$tutorial_path/[secure]-config.xml > configs/[secure]-config.xml
 ---> Running in e65c1be00ec2
 ---> 4894b5a7212d
Removing intermediate container e65c1be00ec2
Step 7/12 : RUN sed -i '/application     pimpleFoam/d; s/\/\/ application     pimpleDyMFoam/application    pimpleDyMFoam/g'     $tutorial_path/Fluid/system/controlDict
 ---> Running in b14ce3214076
 ---> 7c952c369984
Removing intermediate container b14ce3214076
Step 8/12 : RUN rm $tutorial_path/[secure]-config.xml
 ---> Running in d42e716d2bcb
 ---> e7404224b0f4
Removing intermediate container d42e716d2bcb
Step 9/12 : RUN rm -rfv $tutorial_path/Fluid/0/
 ---> Running in a1e949d7520f
removed 'tutorials/FSI/flap_perp/OpenFOAM-deal.II/Fluid/0/p'
removed 'tutorials/FSI/flap_perp/OpenFOAM-deal.II/Fluid/0/phi'
removed 'tutorials/FSI/flap_perp/OpenFOAM-deal.II/Fluid/0/U'
removed 'tutorials/FSI/flap_perp/OpenFOAM-deal.II/Fluid/0/pointDisplacement'
removed directory: 'tutorials/FSI/flap_perp/OpenFOAM-deal.II/Fluid/0'
 ---> bf6cb6b4db43
Removing intermediate container a1e949d7520f
Step 10/12 : RUN cp -r $tutorial_path/Fluid/0.orig/ $tutorial_path/Fluid/0/
 ---> Running in 2b1d5c2ef0a5
 ---> 693137155dfb
Removing intermediate container 2b1d5c2ef0a5
Step 11/12 : RUN addgroup -g 1000 [secure] && adduser -u 1000 -G [secure] -D [secure] && chown -R [secure]:[secure] tutorials configs
 ---> Running in b719198087dc
 ---> eb09e4d02dd4
Removing intermediate container b719198087dc
Step 12/12 : USER [secure]
 ---> Running in 0b43650fb777
 ---> 4d8badf0a761
Removing intermediate container 0b43650fb777
Successfully built 4d8badf0a761
Successfully tagged testcomposedealiiof_tutorial-data:latest
Image for service tutorial-data was built because it did not already exist. To rebuild this image you must use `docker-compose build` or `docker-compose up --build`.
Pulling openfoam-adapter ([secure]/openfoam-adapter-ubuntu1604.home-develop:latest)...
latest: Pulling from [secure]/openfoam-adapter-ubuntu1604.home-develop
Digest: sha256:def31d1013d65c817c17d7798573862b7a630e67d5d5ba870507c83d187b879c
Status: Downloaded newer image for [secure]/openfoam-adapter-ubuntu1604.home-develop:latest
Pulling dealii-adapter ([secure]/dealii-adapter-ubuntu1604.home-develop:latest)...
latest: Pulling from [secure]/dealii-adapter-ubuntu1604.home-develop
Digest: sha256:56f045c657a7b7917e7a61f4dcb2751a32719bb7d96a80a0b2fcf543cc025a8d
Status: Downloaded newer image for [secure]/dealii-adapter-ubuntu1604.home-develop:latest
Creating tutorial-data ... 
Creating tutorial-data
[1A[2KCreating tutorial-data ... [32mdone[0m[1BCreating openfoam-adapter ... 
Creating openfoam-adapter
[1A[2KCreating openfoam-adapter ... [32mdone[0m[1BCreating dealii-adapter ... 
Creating dealii-adapter
[1A[2KCreating dealii-adapter ... [32mdone[0m[1BRunning the simulation...Be patient
Running the simulation...Be patient
All adapters finished!
EXECUTING: export PRECICE_BASE=-ubuntu1604.home-develop; docker-compose config && bash ../../silent_compose.sh 
EXECUTING: docker cp tutorial-data:/Output .
EXECUTING: mkdir Logs && docker-compose logs > Logs/container-logs.md
TEST SUCCEEDED - No difference to referenceOutput found.
travis_time:end:0b455d21:start=1579948117917242166,finish=1579948322854500465,duration=204937258299,event=script[0K[32;1mThe command "python system_testing.py -s dealii-of" exited with 0.[0m
travis_time:start:1bb37ca5[0K$ python push.py -t dealii-of
Cloning into '[secure]_st_output'...

```
